Pre release 2.0 is here